--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
     "use-dencrypt-effect": "^1.0.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "zxcvbn": "^4.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
